feat: expand color theming with pywalfox, zathura, and starship
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -8,7 +8,7 @@ $menu = $run_app vicinae
 # wallpaper
 exec-once = $run_app quickshell
 # wallpaper
-exec-once = $run_app hyprpaper
+# exec-once = $run_app hyprpaper
 # idle manager
 exec-once = $run_app hypridle
 # for screen brightness and stuff
