feat: add vicinae theme integration with matugen
Integrate vicinae application with matugen color generation by
adding template configuration and theme files.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/matugen/config.toml
+++ b/dot_config/matugen/config.toml
@@ -10,6 +10,10 @@ input_path = './templates/pywalfox-colors.json'
 output_path = '~/.cache/wal/colors.json'
 post_hook = 'pywalfox update'
 
-[templates.zathura]
-input_path = './templates/zathura-colors'
-output_path = '~/.config/zathura/zathurarc'
+# [templates.zathura]
+# input_path = './templates/zathura-colors'
+# output_path = '~/.config/zathura/zathurarc'
+
+[templates.vicinae]
+input_path = './templates/vicinae.json'
+output_path = '~/.config/vicinae/themes/matugen.json'
