feat: use quickshell for lock screen
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -5,26 +5,27 @@ $term_exec = $run_app $TERMINAL_EXEC
 $file_manager = $term_exec lfcd_sh
 $menu = $run_app vicinae
 
-# wallpaper
-exec-once = $run_app quickshell
-# wallpaper
-# exec-once = $run_app hyprpaper
-# idle manager
-exec-once = $run_app hypridle
-# for screen brightness and stuff
-exec-once = $run_app hyprsunset
 # polkit agent
 exec-once = $run_app /usr/lib/hyprpolkitagent/hyprpolkitagent
 # udiskie for automount
 exec-once = $run_app udiskie
 # playerctl daemon
 exec-once = $run_app playerctld
+# idle manager
+exec-once = $run_app hypridle
+# for screen brightness and stuff
+exec-once = $run_app hyprsunset
+# wallpaper
+# exec-once = $run_app hyprpaper
+
+# desktop shell
+exec-once = $run_app quickshell
+# menu
+exec-once = $run_app vicinae server
 # email client
 exec-once = $run_app thunderbird
 # remote desktop
 exec-once = $run_app sunshine
-# menu
-exec-once = $run_app vicinae server
 # easy effects
 # exec-once = $run_app easyeffects --gapplication-service
 
