feat: xcompose + noctalia changes
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/binds.conf
+++ b/dot_config/hypr/conf.d/binds.conf
@@ -20,7 +20,7 @@ bind = $mod, F11, exec, $run_app loginctl lock-session
 # suspend
 bind = $mod, F12, exec, $run_app systemctl suspend
 # toggle bar
-bind = $mod, B, exec, $run_app killall -SIGUSR1 waybar
+bind = $mod, B, exec, qs ipc call bar toggle
 
 #
 # Apps:
