--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1432,7 +1432,7 @@ dim_opacity 0.75
 #: kitty will cycle through various known editors (vim, emacs, etc.)
 #: and take the first one that exists on your system.
 
-# close_on_child_death no
+close_on_child_death yes
 
 #: Close the window when the child process (usually the shell) exits.
 #: With the default value no, the terminal will remain open when the
