--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -3,7 +3,7 @@ $run_app = app2unit --
 $term = $run_app $TERMINAL
 $term_exec = $run_app $TERMINAL_EXEC
 $file_manager = $term_exec lfcd_sh
-$menu = $run_app vicinae
+$menu = $run_app vicinae toggle
 
 # polkit agent
 exec-once = $run_app /usr/lib/hyprpolkitagent/hyprpolkitagent
