feat(git): add new aliases
Introduce more granular aliases for commit and reset operations to
streamline the development workflow.

The `commit` aliases are updated for better clarity:
- `ca` now stages all tracked files and commits.
- `cm` and `cma` are added to commit with a message directly from the
  command line.

New `reset` aliases provide shortcuts for common scenarios:
- `rsth` and `rsts` for hard and soft resets.
- `cpop` simplifies undoing the last commit while keeping the changes.```

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -66,8 +66,9 @@
   ck = checkout
   ckb = checkout -b
   c = commit -s
-  cm = commit -s
-  cma = commit -s -a
+  ca = commit -s -a
+  cm = commit -s -m
+  cma = commit -s -a -m
   cmA = "!git add -A; git c"
   cmam = commit --amend
   cg = "!gen_commit_msg \"$@\""
@@ -81,6 +82,9 @@
   pf = push --force-with-lease --force-if-includes
   rs = reset
   rst = reset
+  rsth = reset --hard
+  rsts = reset --soft
+  cpop = reset --soft HEAD^1
   rv = revert
   rem = remote -v
   st = status
