feat(theme): update color scheme and noctalia-shell config
Regenerates the entire color theme from a new wallpaper.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/kitty/matugen.conf
+++ b/dot_config/kitty/matugen.conf
@@ -7,10 +7,10 @@
 ## I changed some stuff
 
 # Basic colors
-foreground            #dee3e6
-background            #0f1416
-selection_foreground  #1d343a
-selection_background  #b2cbd3
+foreground            #d8e5e9
+background            #091518
+selection_foreground  #003827
+selection_background  #8bd5b5
 
 # Cursor colors
 cursor            #d8dee9
