--- a/dot_config/noctalia/settings.json
+++ b/dot_config/noctalia/settings.json
@@ -6,6 +6,7 @@
         ],
         "position": "center",
         "sortByMostUsed": true,
+        "terminalCommand": "xterm -e",
         "useApp2Unit": true
     },
     "audio": {
@@ -30,13 +31,21 @@
         "widgets": {
             "center": [
                 {
-                    "autoHide": true,
+                    "colorizeIcons": false,
+                    "hideMode": "hidden",
                     "id": "ActiveWindow",
                     "scrollingMode": "always",
-                    "showIcon": true
+                    "showIcon": true,
+                    "width": 145
                 }
             ],
             "left": [
+                {
+                    "customIconPath": "",
+                    "icon": "",
+                    "id": "ControlCenter",
+                    "useDistroLogo": true
+                },
                 {
                     "hideUnoccupied": false,
                     "id": "Workspace",
@@ -52,7 +61,7 @@
                     "showNetworkStats": false
                 },
                 {
-                    "autoHide": true,
+                    "hideMode": "hidden",
                     "id": "MediaMini",
                     "scrollingMode": "hover",
                     "showAlbumArt": false,
@@ -62,6 +71,9 @@
             ],
             "right": [
                 {
+                    "blacklist": [
+                    ],
+                    "colorizeIcons": false,
                     "id": "Tray"
                 },
                 {
@@ -91,39 +103,106 @@
                     "id": "NightLight"
                 },
                 {
+                    "customFont": "",
                     "formatHorizontal": "HH:mm ddd, MMM dd",
                     "formatVertical": "HH mm - dd MM",
                     "id": "Clock",
-                    "useMonospacedFont": true,
+                    "useCustomFont": false,
                     "usePrimaryColor": true
                 }
             ]
         }
+    },
+    "battery": {
+        "chargingMode": 0
     },
     "brightness": {
         "brightnessStep": 5
     },
     "colorSchemes": {
         "darkMode": true,
+        "generateTemplatesForPredefined": true,
+        "matugenSchemeType": "scheme-expressive",
         "predefinedScheme": "Rosepine",
         "useWallpaperColors": true
     },
+    "controlCenter": {
+        "cards": [
+            {
+                "enabled": true,
+                "id": "profile-card"
+            },
+            {
+                "enabled": true,
+                "id": "shortcuts-card"
+            },
+            {
+                "enabled": true,
+                "id": "audio-card"
+            },
+            {
+                "enabled": true,
+                "id": "media-sysmon-card"
+            },
+            {
+                "enabled": true,
+                "id": "weather-card"
+            }
+        ],
+        "position": "close_to_bar_button",
+        "shortcuts": {
+            "left": [
+                {
+                    "id": "WiFi"
+                },
+                {
+                    "id": "Bluetooth"
+                },
+                {
+                    "id": "ScreenRecorder"
+                },
+                {
+                    "id": "WallpaperSelector"
+                }
+            ],
+            "right": [
+                {
+                    "id": "Notifications"
+                },
+                {
+                    "id": "PowerProfile"
+                },
+                {
+                    "id": "KeepAwake"
+                },
+                {
+                    "id": "NightLight"
+                }
+            ]
+        }
+    },
     "dock": {
-        "autoHide": false,
         "backgroundOpacity": 1,
-        "exclusive": false,
+        "colorizeIcons": false,
+        "displayMode": "always_visible",
         "floatingRatio": 1,
         "monitors": [
         ],
+        "onlySameOutput": true,
         "pinnedApps": [
-        ]
+        ],
+        "size": 1
     },
     "general": {
+        "animationDisabled": false,
         "animationSpeed": 1,
         "avatarImage": "/home/joao/.face",
+        "compactLockScreen": false,
         "dimDesktop": false,
         "forceBlackScreenCorners": false,
+        "lockOnSuspend": true,
         "radiusRatio": 1,
+        "scaleRatio": 1,
         "screenRadiusRatio": 1,
         "showScreenCorners": false
     },
@@ -136,29 +215,16 @@
         "name": "Argoncilhe, Portugal",
         "showWeekNumberInCalendar": false,
         "use12hourFormat": false,
-        "useFahrenheit": false
-    },
-    "matugen": {
-        "enableUserTemplates": true,
-        "foot": false,
-        "fuzzel": false,
-        "ghostty": false,
-        "gtk3": true,
-        "gtk4": true,
-        "kitty": false,
-        "pywalfox": false,
-        "qt5": true,
-        "qt6": true,
-        "vesktop": true
+        "useFahrenheit": false,
+        "weatherEnabled": true
     },
     "network": {
-        "bluetoothEnabled": true,
         "wifiEnabled": true
     },
     "nightLight": {
         "autoSchedule": true,
         "dayTemp": "6500",
-        "enabled": true,
+        "enabled": false,
         "forced": false,
         "manualSunrise": "06:30",
         "manualSunset": "18:30",
@@ -168,14 +234,21 @@
         "alwaysOnTop": false,
         "criticalUrgencyDuration": 15,
         "doNotDisturb": false,
-        "enableOSD": true,
-        "lastSeenTs": 1758912688000,
+        "lastSeenTs": 1760692769000,
         "location": "top_right",
         "lowUrgencyDuration": 3,
         "monitors": [
         ],
         "normalUrgencyDuration": 8,
         "respectExpireTimeout": false
+    },
+    "osd": {
+        "alwaysOnTop": true,
+        "autoHideMs": 2000,
+        "enabled": true,
+        "location": "top_right",
+        "monitors": [
+        ]
     },
     "screenRecorder": {
         "audioCodec": "opus",
@@ -188,16 +261,35 @@
         "videoCodec": "h264",
         "videoSource": "portal"
     },
-    "settingsVersion": 1,
+    "settingsVersion": 16,
+    "setupCompleted": true,
+    "templates": {
+        "discord": false,
+        "discord_armcord": false,
+        "discord_dorion": false,
+        "discord_equibop": false,
+        "discord_lightcord": false,
+        "discord_vesktop": false,
+        "discord_webcord": false,
+        "enableUserTemplates": false,
+        "foot": false,
+        "fuzzel": false,
+        "ghostty": false,
+        "gtk": false,
+        "kcolorscheme": false,
+        "kitty": false,
+        "pywalfox": false,
+        "qt": false
+    },
     "ui": {
-        "fontBillboard": "Inter",
         "fontDefault": "Sans Serif",
+        "fontDefaultScale": 1,
         "fontFixed": "Monospace",
-        "idleInhibitorEnabled": true,
-        "monitorsScaling": [
-        ]
+        "fontFixedScale": 1,
+        "tooltipsEnabled": true
     },
     "wallpaper": {
+        "defaultWallpaper": "/home/joao/.dotfiles/submodules/noctalia-shell/Assets/Wallpaper/noctalia.png",
         "directory": "/home/joao/.local/share/wallpaper",
         "enableMultiMonitorDirectories": false,
         "enabled": true,
@@ -212,7 +304,7 @@
             {
                 "directory": "/home/joao/Pictures/wallpapers",
                 "name": "DP-2",
-                "wallpaper": "/home/joao/.local/share/wallpaper/ds_2.png"
+                "wallpaper": "/home/joao/.local/share/wallpaper/iceworm2.jpg"
             }
         ],
         "randomEnabled": false,
