--- a/dot_config/qt6ct/colors/noctalia.conf
+++ b/dot_config/qt6ct/colors/noctalia.conf
@@ -1,4 +1,4 @@
 [ColorScheme]
-active_colors=#dee3e6, #0f1416, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee3e6, #ffffff, #dee3e6, #0f1416, #0f1416, #000000, #004e5d, #afecff, #b2cbd3, #85d2e8, #0f1416, #000000, #0f1416, #dee3e6, #b2cbd3
-disabled_colors=#dee3e6, #0f1416, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee3e6, #ffffff, #dee3e6, #0f1416, #0f1416, #000000, #004e5d, #afecff, #b2cbd3, #85d2e8, #0f1416, #000000, #0f1416, #dee3e6, #b2cbd3
-inactive_colors=#dee3e6, #0f1416, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #dee3e6, #ffffff, #dee3e6, #0f1416, #0f1416, #000000, #004e5d, #afecff, #b2cbd3, #85d2e8, #0f1416, #000000, #0f1416, #dee3e6, #b2cbd3
+active_colors=#d8e5e9, #091518, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #d8e5e9, #ffffff, #d8e5e9, #091518, #091518, #000000, #00513a, #86f8ca, #8bd5b5, #69dbaf, #091518, #000000, #091518, #d8e5e9, #8bd5b5
+disabled_colors=#d8e5e9, #091518, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #d8e5e9, #ffffff, #d8e5e9, #091518, #091518, #000000, #00513a, #86f8ca, #8bd5b5, #69dbaf, #091518, #000000, #091518, #d8e5e9, #8bd5b5
+inactive_colors=#d8e5e9, #091518, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #d8e5e9, #ffffff, #d8e5e9, #091518, #091518, #000000, #00513a, #86f8ca, #8bd5b5, #69dbaf, #091518, #000000, #091518, #d8e5e9, #8bd5b5
