refactor(hypr): centralize control commands into variables
Some keybindings have alternative keybindings that perform the same
effect. Add vars for these to avoid repeating stuff.

Migrate notification management from `swaync` to QuickShell's IPC calls.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/apps.conf
+++ b/dot_config/hypr/conf.d/apps.conf
@@ -5,6 +5,21 @@ $term_exec = $run_app $TERMINAL_EXEC
 $file_manager = $term_exec lfcd_sh
 $menu = $run_app vicinae toggle
 
+$volume_toggle = $run_app pactl set-sink-mute @DEFAULT_SINK@ toggle
+$volume_decrease = $run_app pactl set-sink-volume @DEFAULT_SINK@ -5%
+$volume_increase = $run_app pactl set-sink-volume @DEFAULT_SINK@ +5%
+$mic_toggle = $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+$bright_decrease = $run_app qs ipc call brightness decrease
+$bright_increase = $run_app qs ipc call brightness increase
+
+$player_pp = $run_app playerctl play-pause
+$player_set0 = $run_app playerctl position 0
+$player_prev = $run_app playerctl previous
+$player_next = $run_app playerctl next
+$player_skip_5 = $run_app playerctl position 0.05+
+$player_rewind_5 = $run_app playerctl position 0.05-
+
 # polkit agent
 exec-once = $run_app /usr/lib/hyprpolkitagent/hyprpolkitagent
 # udiskie for automount
@@ -13,10 +28,6 @@ exec-once = $run_app udiskie
 exec-once = $run_app playerctld
 # idle manager
 exec-once = $run_app hypridle
-# for screen brightness and stuff
-exec-once = $run_app hyprsunset
-# wallpaper
-# exec-once = $run_app hyprpaper
 
 # desktop shell
 exec-once = $run_app quickshell
