--- a/dot_config/hypr/conf.d/binds.conf
+++ b/dot_config/hypr/conf.d/binds.conf
@@ -7,8 +7,6 @@ $mod = SUPER
 #
 # Basics:
 #
-# exit Hyprland. Hyprland would hang while waiting for swaynag to exit,
-# so I added the killall cmd.
 bind = $mod+SHIFT+CONTROL, Q, exec, uwsm stop
 # reload Hyprland
 bind = $mod+SHIFT+CONTROL, R, exec, $run_app hyprctl reload
@@ -43,52 +41,53 @@ bind = $mod,        R, exec, $run_app $BROWSER
 bind = $mod+SHIFT,  R, exec, $run_app chromium # the fallback browser
 bind = $mod,        S, exec, $run_app strawberry
 bind = $mod,        W, exec, $term_exec nvim
+bind = $mod,        V, exec, $run_app qs ipc call screenRecorder toggle
 
 #
 # Media keys:
 #
 # audio
-bind = $mod,          F1, exec, $run_app pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = $mod,          F2, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = $mod,          F3, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = $mod+SHIFT,    F1, exec, $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bind = $mod+CONTROL,  F1, exec, $run_app next_sink.sh
+bind = $mod,          F1, exec, $volume_toggle
+bind = $mod,          F2, exec, $volume_decrease
+bind = $mod,          F3, exec, $volume_increase
+bind = $mod+SHIFT,    F1, exec, $mic_toggle
+bind = $mod+SHIFT,    F2, exec, $run_app next_sink.sh
 #
-bind = ,      XF86AudioMute,        exec, $run_app pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = ,      XF86AudioLowerVolume, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = ,      XF86AudioRaiseVolume, exec, $run_app pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = ,      XF86AudioMicMute,     exec, $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bind = SHIFT, XF86AudioMute,     exec, $run_app pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = ,      XF86AudioMute,        exec, $volume_toggle
+bind = ,      XF86AudioLowerVolume, exec, $volume_decrease
+bind = ,      XF86AudioRaiseVolume, exec, $volume_increase
+bind = ,      XF86AudioMicMute,     exec, $mic_toggle
+bind = SHIFT, XF86AudioMute,     exec, $mic_toggle
 # display
-bind = $mod, F4, exec, $run_app brightnessctl -c backlight set 5%-
-bind = $mod, F5, exec, $run_app brightnessctl -c backlight set 5%+
+bind = $mod, F4, exec, $bright_decrease
+bind = $mod, F5, exec, $bright_increase
 #
-bind = , XF86MonBrightnessDown, exec, $run_app brightnessctl -c backlight set 5%-
-bind = , XF86MonBrightnessUp, exec, $run_app brightnessctl -c backlight set 5%+
+bind = , XF86MonBrightnessDown, exec, $bright_decrease
+bind = , XF86MonBrightnessUp, exec, $bright_increase
 # media
-bind = $mod, F6, exec, $run_app playerctl play-pause
-bind = $mod+SHIFT, F6, exec, $run_app playerctl position 0
-bind = $mod, F7, exec, $run_app playerctl previous
-bind = $mod+SHIFT, F7, exec, $run_app playerctl volume 0.05-
-bind = $mod, F8, exec, $run_app playerctl next
-bind = $mod+SHIFT, F8, exec, $run_app playerctl volume 0.05+
+bind = $mod, F6, exec, $player_pp
+bind = $mod+SHIFT, F6, exec, $player_set0
+bind = $mod, F7, exec, $player_prev
+bind = $mod+SHIFT, F7, exec, $player_skip_5
+bind = $mod, F8, exec, $player_next
+bind = $mod+SHIFT, F8, exec, $player_rewind_5
 #
-bind = , XF86AudioPlay, exec, $run_app playerctl play-pause
-bind = SHIFT, XF86AudioPlay, exec, $run_app playerctl position 0
-bind = , XF86AudioPrev, exec, $run_app playerctl previous
-bind = SHIFT, XF86AudioPrev, exec, $run_app playerctl volume 0.05-
-bind = , XF86AudioNext, exec, $run_app playerctl next
-bind = SHIFT, XF86AudioNext, exec, $run_app playerctl volume 0.05+
+bind = , XF86AudioPlay, exec, $player_pp
+bind = SHIFT, XF86AudioPlay, exec, $player_set0
+bind = , XF86AudioPrev, exec, $player_prev
+bind = SHIFT, XF86AudioPrev, exec, $player_skip_5
+bind = , XF86AudioNext, exec, $player_next
+bind = SHIFT, XF86AudioNext, exec, $player_rewind_5
 #
 bind = , XF86Search, exec, $menu
 
 #
 # Notifications:
 #
-bind = $mod,          F10, exec, $run_app swaync-client -d -sw # toggle dnd
-bind = $mod,          backspace, exec, $run_app swaync-client --close-latest -sw # dismiss last
-bind = $mod+SHIFT,    backspace, exec, $run_app swaync-client --close-all -sw # dismiss all
-bind = $mod+CONTROL,  backspace, exec, $run_app swaync-client -t -sw # show notifications
+bind = $mod,          F10, exec, $run_app qs ipc call notifications toggleDND # toggle dnd
+bind = $mod,          backspace, exec, $run_app qs ipc call notifications dismissOldest # dismiss last
+bind = $mod+SHIFT,    backspace, exec, $run_app qs ipc call notifications clear # dismiss all
+bind = $mod+CONTROL,  backspace, exec, $run_app qs ipc call notifications toggleHistory # show notifications
 
 #
 # Screenshots:
@@ -165,9 +164,6 @@ bind = $mod+SHIFT, Period, movewindow, mon:+1
 #
 bind = $mod,        Space, fullscreen, 0
 bind = $mod+SHIFT,  Space, togglefloating,
-# Example special workspace (scratchpad)
-# bind = $mod, Q, togglespecialworkspace, magic
-# bind = $mod+SHIFT, Q, tags-movetoworkspacesilent, special:magic
 
 #
 # Passthrough mode:
