--- a/dot_config/hypr/conf.d/rules.conf
+++ b/dot_config/hypr/conf.d/rules.conf
@@ -2,7 +2,7 @@
 windowrule = suppressevent maximize, class:.* # You'll probably like this.
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrule = workspace special:thunderbird silent, class:^(thunderbird)$
+windowrule = workspace special:thunderbird silent, class:^(org.mozilla.Thunderbird)$
 
 # xwaylandvideobridge hide
 windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
@@ -21,6 +21,3 @@ windowrule = bordersize 0, floating:0, onworkspace:w[tg1]
 windowrule = rounding 0, floating:0, onworkspace:w[tg1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules
-workspace = special:magic, on-created-empty:$term
