--- a/ifgdt/hypr/override.d/apps.conf
+++ b/ifgdt/hypr/override.d/apps.conf
@@ -1,5 +1,7 @@
 # ifgdt apps
 
+# backups
+exec-once = $run_app syncthingtray-qt6 --wait
 # open rgb sakura theme
 exec-once = $run_app openrgb -p Sakura
 # XPPen drawing table
